add Company section to servlet
- update view.jsp:

  - add 'EXPERIENCE' & 'EDUCATION' to c:choose.
  - remove "class" in <section>, <hr/>.
  - change <h4> to <h3> for title section.
  - add link "css/view.css".

- update edit.jsp:

  - add 'EXPERIENCE' & 'EDUCATION' to c:choose.
  - create:
    - fragments/company.jsp.
    - fragments/period.jsp.
  - remove "class" in <section>, <h3>, <hr/>.
  - add "required" to "name".
  - add link "css/edit.css".

- update HtmlUtil:

  - add getCompanyLink().
  - rename getLink to getContactLink().

- fix list.jsp:

  - fix output email: rename getLink to getContactLink().
  - remove "class" in <section>.

- update DateUtil:

  - add getString() & getFullString.

- update style.css:

  - create:
    - css/view.css.
    - css/edit.css.
  - move css for view & edit page to new css files.

- update ResumeServlet:

  - update editSection():
    - implement EXPERIENCE, EDUCATION.
    - move setSection inside switch.
    - fix if().
  - add getCompanies(), getPeriods(), getDate().

- update ResumeTestData: uncomment CompanySection.